# Video_streaming

./: .gitignore  .pre-commit-config.yaml  bandit.yaml
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  cd.yml  ci.yml  ci_dev.yml  codeql.yml
Docker/: .dockerignore  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_14_0812-be8de8464303_initial_tables.py
backend/src/: __init__.py  config.py  database.env.example  database.py  i18n.py  s3.env.example
backend/src/api/: files.py  health.py  metrics.py  routes.py
backend/src/models/: __init__.py  comments.py  hls_files.py  playlist.py  user.py  video.py  video_likes.py  video_views.py
backend/src/schemas/: comments.py  endpoint.py  endpoint_schema.py  enum.py  hls_files.py  metric.py  metric_schema.py  playlist.py  user.py  video.py  video_likes.py  video_views.py
backend/src/services/: __init__.py  database.py  rabbit_client.py  s3_client.py
backend/tests/: test_main.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.jsx  main.tsx
frontend/src/components/: NavBar.tsx  VideoCard.tsx  VideoPlayer.tsx  app-sidebar.tsx  changelog-form.tsx  infinite-scroll.tsx  login-form.tsx  nav-user.tsx  pricing-table.tsx  register-form.tsx  search-form.tsx  site-header.tsx
frontend/src/components/ui/: sidebar.tsx  sonner.tsx
frontend/src/pages/: Changelog.tsx  CreditPay.tsx  Home.tsx  Login.tsx  NotFound.tsx  Pricing.tsx  Profile.tsx  Register.tsx  Upload.tsx  Watch.tsx
frontend/src/routes/: AppRouter.tsx
frontend/src/styles/: Home.css  index.css
frontend/tests/: App.test.jsx  Home.test.tsx
gateway/: nginx.conf
monitoring/: dashboard.json  loki-config.yaml  prometheus.yaml  promtail-config.yaml
services/auth/: main.py  pyproject.toml
services/auth/tests/: test_main.py
services/converting/: Dockerfile
services/convertor/: Dockerfile  config.py  main.py  pyproject.toml  rabbit_client.py  requirements.txt  s3.env.example  s3_client.py
services/convertor/convertor/: rabbit_client.py  s3_client.py
services/convertor/tests/: test_config.py  test_main.py  test_s3_client.py
services/moderation/: pyproject.toml
services/moderation/tests/: test_main.py
src/: rabbit_broker.py
