[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.24.1",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "fastapi>=0.116.1",
    "faststream[rabbit]>=0.5.48",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.black]
line-length = 88
target-version = ["py312"]  # Измените под свою версию Python
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
skip = ["migrations", ".venv"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["migrations", ".venv"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E/W — pycodestyle, F — pyflakes, I — isort

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
strict_optional = true
explicit_package_bases = true
exclude = "(migrations|.venv)"
