[project]
name = "convertor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.24.1",
    "faststream[cli,prometheus,rabbit]>=0.5.48",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
]
